--- a/handrecog.ipynb
+++ b/handrecog.ipynb
@@ -17,7 +17,7 @@
     "from keras_preprocessing.image import ImageDataGenerator\n",
     "\n",
     "\n",
-    "TRAINING_DIR = \"/home/rajatv/Downloads/Machine/archives/Train/\"\n",
+    "TRAINING_DIR = \"/Users/prabh/Downloads/mymodel2/mymodel2"\n",
     "image_generator = ImageDataGenerator(rescale = 1./255, validation_split=0.2)\n",
     "\n",
     "train_generator = image_generator.flow_from_directory(\n",
